default/objects/NVMConnect__Dial_Entry__c/NVMConnect__Dial_Entry__c.object-meta.xml
<CustomObject>
    <label>Dial Entry</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dial Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>