default/objects/NVMConnect__Dial_Entry__c/fields/NVMConnect__CallObjectIdentifier__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__CallObjectIdentifier__c</fullName>
    <description>Guid of the call made to this dial entry, if any</description>
    <label>Call Object Identifier</label>
    <length>38</length>
    <type>Text</type>
</CustomField>