default/objects/NVMConnect__Dial_Entry__c/fields/NVMConnect__Comments__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>