default/objects/NVMConnect__Dial_Entry__c/fields/NVMConnect__Dial_List__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Dial_List__c</fullName>
    <label>Dial List</label>
    <referenceTo>NVMConnect__DialList__c</referenceTo>
    <relationshipLabel>Dial Entries</relationshipLabel>
    <relationshipName>Dial_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>