default/objects/NVMConnect__Dial_Entry__c/fields/NVMConnect__IndexedCallObjectIdentifier__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__IndexedCallObjectIdentifier__c</fullName>
    <description>Guid of the call made to this dial entry, if any</description>
    <externalId>true</externalId>
    <label>Indexed Call Object Identifier</label>
    <length>38</length>
    <type>Text</type>
</CustomField>