default/objects/NVMConnect__Dial_Entry__c/fields/NVMConnect__List_Active__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__List_Active__c</fullName>
    <description>Echoes the Active/inactive status of the list it belongs to</description>
    <formula>NVMConnect__Dial_List__r.NVMConnect__Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Active</label>
    <type>Checkbox</type>
</CustomField>