default/objects/NVMConnect__Dial_Entry__c/fields/NVMConnect__Order__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Order__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Lower numbers will be dialled first; use zero to drop an entry onto top of the queue</description>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>