default/objects/NVMConnect__Dial_Entry__c/fields/NVMConnect__Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Primary_Phone__c</fullName>
    <label>Primary Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>