default/objects/NVMConnect__Dial_Entry__c/fields/NVMConnect__Random_Reassign__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Random_Reassign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this field is updated, reassignment to another agent who has recently used the list is triggered</description>
    <inlineHelpText>When this field is updated, reassignment to another agent who has recently used the list is triggered</inlineHelpText>
    <label>Random Reassign</label>
    <type>Checkbox</type>
</CustomField>