default/objects/NVMConnect__Dial_Entry__c/fields/NVMConnect__Skipped__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Skipped__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Records that this entry was skipped by the agent while working the list</description>
    <label>Skipped</label>
    <type>Checkbox</type>
</CustomField>