default/objects/NVMConnect__Dial_Entry__c/fields/NVMConnect__Started__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Started__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Records that an agent has started calling this entry (it may also be completed too)</description>
    <label>Started</label>
    <type>Checkbox</type>
</CustomField>