default/objects/NVMConnect__Dial_Entry__c/fields/NVMConnect__URL__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__URL__c</fullName>
    <description>URL of the record to dial</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>