default/objects/NVMConnect__Dial_Entry__c/validationRules/NVMConnect__Call_Object_Identifier_Deprecated.validationRule-meta.xml
<ValidationRule>
    <fullName>NVMConnect__Call_Object_Identifier_Deprecated</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK(NVMConnect__CallObjectIdentifier__c)</errorConditionFormula>
    <errorMessage>CallObjectIdentifier field is no longer used. Use IndexedCallObjectIdentifier.</errorMessage>
</ValidationRule>